feat: added variables

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,2 +1,11 @@
 @import './variables.scss';
 @import './../../node_modules/bulma';
+
+
+.hero{
+  &.is-primary {
+    background-color: $hero-primary;
+  }
+
+  position: relative;
+}
