--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,6 +4,10 @@
 .hero{
   &.is-primary {
     background-color: $hero-primary;
+
+    @media only screen and (min-width: $tablet) {
+      background-color: $primary-700;
+    }
   }
 
   position: relative;
