fix: small phone issues

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,6 +10,13 @@
     }
   }
 
+  .columns {
+    .column {
+      display: flex;
+      justify-content: center;
+    }
+  }
+
   position: relative;
 }
 
