--- a/src/components/terminal.scss
+++ b/src/components/terminal.scss
@@ -1,3 +1,5 @@
+@import './../styles/variables.scss';
+
 $terminalBackground: #0A1704;
 $terminalHeader: #000000;
 $terminalBorder: 1em;
@@ -46,6 +48,11 @@ $rainbowViolet: #4B0082;
   font-family: Monaco;
   width: 40vw;
   max-width: 40vw;
+
+  @media only screen and (max-width: $tablet) {
+    width: auto;
+    max-width: inherit;
+  }
 
   .terminal-header {
     background: $terminalHeader;
