--- a/src/components/slider.scss
+++ b/src/components/slider.scss
@@ -103,6 +103,24 @@
           font-weight: normal;
         }
       }
+
+      .slider-description-toggle {
+        display: none;
+      }
+
+      @media only screen and (max-width: $tablet) {
+        .slider-description-toggle {
+          display: block;
+        }
+
+        .slider-description {
+          display: none;
+
+          &.is-active {
+            display: block;
+          }
+        }
+      }
     }
   }
 }
