--- a/src/components/recruitment.scss
+++ b/src/components/recruitment.scss
@@ -8,7 +8,7 @@ $recruitmentStatus: $rainbowRed;
   padding: .5em;
 
   .title {
-    margin: 0;
+    margin-bottom: 0;
   }
 
   .notification-status {
