--- a/src/components/contact.scss
+++ b/src/components/contact.scss
@@ -1,122 +1,147 @@
 @import './../styles/variables.scss';
 
-$altMessageBlock: #4d4d4d;
+$contactBackground: #2f3346;
+
+.overlay {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: rgba(0,0,0,.18);
+  backdrop-filter: blur(2px);
+  z-index: 998;
+  display: none;
+
+  &.is-active {
+    display: block;
+  }
+}
 
 #contact {
   position: fixed;
   bottom: 0;
-  right: .5em;
-  width: 20em;
+  top: 0;
+  width: 30em;
+  right: 0;
   z-index: 999;
-  background: darken($hero-primary, 10%);
-  border-radius: .5em;
+  background: $white;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0 0 3em 3em rgba(0,0,0,.5);
+
   display: none;
 
+  &.is-active {
+    display: block;
+  }
+
+  @media (prefers-color-scheme: dark) {
+    background: $contactBackground;
+    .title {
+      color: $primary-50;
+    }
+
+    .subtitle {
+      color: $primary-100;
+    }
+  }
+
+  @media only screen and (max-width: $tablet) {
+    width: 100%;
+  }
+
   .contact-header {
-    background: darken($rainbowRed, 10%);
-    padding: .5em;
-    color: $white;
-    border-radius: .5em .5em 0 0;
-    box-shadow: 0 .5em .3em darken($hero-primary, 10%);
+    padding: 1em;
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+    &:after {
+      background: -webkit-linear-gradient($white, transparent);
+      @media (prefers-color-scheme: dark) {
+        background: -webkit-linear-gradient($contactBackground, transparent);
+      }
+      content: '';
+      position: absolute;
+      top: 100%;
+      height: 3em;
+      left: 0;
+      right: 0;
+    }
   }
 
   .contact-body {
-    height: 300px;
-    background: darken($hero-primary, 10%);
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    padding: .5em;
+    flex: 10;
     overflow-y: scroll;
 
-    .message-container {
+    .contact-body-messages {
       display: flex;
-      flex-direction: row;
-
-      &.is-bot {
-        flex-direction: row-reverse;
-      }
-    }
-
-    .message {
-      padding: .5em;
-      background: $rainbowRed;
-      color: $white;
-      border-radius: .5em;
-      display: inline-block;
-      margin: .2em;
-
-      &.is-bot {
-        background: $altMessageBlock;
-      }
+      flex-direction: column-reverse;
+      height: 100%;
     }
 
     .message-avatar {
-      background: $rainbowBlue;
-      border-radius: 5em;
-      width: 2em;
-      height: 2em;
-      display: inline-block;
-      margin: .2em;
+      border-radius: 2em;
+      width: 1em;
+      height: 1em;
+      background: grey;
+      margin: .5em;
+      padding: 1em;
     }
 
-    .message-avatar-container {
+    .message-input {
       display: flex;
-      flex-direction: column;
-      justify-content: flex-end;
+      flex-direction: row;
+      margin: .5em;
+      align-items: flex-end;
+      color: $white;
+
+      &.is-bot {
+        .message-bubble {
+          background: grey;
+        }
+      }
+
+      &.is-user {
+        flex-direction: row-reverse;
+        .message-bubble {
+          background: $primary;
+        }
+      }
+    }
+
+    .message-bubble {
+      border-radius: .75em;
+      display: inline-block;
+      padding: .5em;
+      margin: .1em;
     }
   }
 
-  .message-content {
-    background: darken($hero-primary, 5%);
-    border-top: 1px solid $black;
-    overflow-y: scroll;
+  .contact-input {
+    display: flex;
+    flex-direction: row;
+    justify-content: stretch;
 
     textarea {
+      flex-grow: 10;
+      margin: .5em;
       resize: none;
-    }
-  }
-
-  .typing-indicator {
-    display: flex;
-    flex-direction: row-reverse;
-    padding-right: 3em;
-    span {
-      display: inline-block;
-      margin: .1em;
-      width: .5em;
-      height: .5em;
-      background: transparent;
       border-radius: 1em;
-      animation: typeFade 1s infinite;
+      font-size: 1.25em;
+      padding: .25em .5em;
+      height: 3em;
 
-      &:nth-child(1) {
-        animation-delay: .7s;
-      }
-      &:nth-child(2) {
-        animation-delay: .5s;
-      }
-      &:nth-child(3) {
-        animation-delay: .2s;
+      &:active, &:hover, &:focus {
+        box-shadow: none;
+        outline: none;
       }
     }
 
-    &.is-active {
-      span {
-        background: $altMessageBlock;
-      }
+    .button {
+      margin: .5em;
     }
-  }
-}
-
-@keyframes typeFade {
-  0% {
-    opacity: 1;
-  }
-  45% {
-    opacity: .5;
-  }
-  100% {
-    opacity: 1;
   }
 }
