--- a/src/components/slider.scss
+++ b/src/components/slider.scss
@@ -147,6 +147,10 @@
 
       .slider-description-toggle {
         display: none;
+
+        &:active {
+          color: $primary;
+        }
       }
 
       @media only screen and (max-width: $tablet) {
