feat: remove level margin

--- a/src/components/slider.scss
+++ b/src/components/slider.scss
@@ -126,6 +126,10 @@
         }
       }
 
+      .level {
+        margin-bottom: 0;
+      }
+
       .slide-image {
         position: absolute !important;
         top: 0;
