--- a/src/components/recruitment.scss
+++ b/src/components/recruitment.scss
@@ -2,7 +2,7 @@
 
 $recruitmentStatus: $rainbowRed;
 
-.recuritment-notifier {
+.recruitment-notifier {
   font-size: 2em;
   color: $white;
   padding: .5em;
