feat: update recruitment notification status

--- a/src/components/recruitment.scss
+++ b/src/components/recruitment.scss
@@ -1,6 +1,6 @@
 @import './../styles/variables.scss';
 
-$recruitmentStatus: $rainbowRed;
+$recruitmentStatus: $rainbowOrange;
 
 .recruitment-notifier {
   font-size: 2em;
