feat: improve overall styling

--- a/src/components/nav.scss
+++ b/src/components/nav.scss
@@ -10,7 +10,7 @@
   justify-content: center;
 }
 
-.navbar {
+.navbar.is-main {
   background: $white !important;
   border-radius: 10em;
   padding: 1em;
