feat: development tags

--- a/src/components/slider.scss
+++ b/src/components/slider.scss
@@ -110,6 +110,10 @@
         &.is-planning {
           background: $rainbowViolet;
         }
+
+        &.is-development {
+          background: $rainbowBlue;
+        }
       }
 
       &.is-active {
