--- a/src/pages/cv.scss
+++ b/src/pages/cv.scss
@@ -116,3 +116,24 @@ $linearWidth: .5em;
 .modal-card-foot {
   display: block !important;
 }
+
+.columns.is-reversed {
+  flex-direction: row-reverse;
+}
+
+.section {
+  &.is-dark {
+    background: $primary-100;
+  }
+}
+
+.img {
+  &.is-rounded {
+    border-radius: 100%;
+  }
+
+  + .tags {
+    margin-top: .5em;
+    justify-content: center;
+  }
+}
