--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -29,6 +29,7 @@ $terminalExpand: #00DB47;
 $terminalExpandBorder: #0d791f;
 $terminalButtonSize: .75em;
 
+$gold: #c5c34a;
 
 $rainbowRed: #FF0000;
 $rainbowOrange: #FF7F00;
