feat: added new design and content for website

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -38,6 +38,4 @@ $rainbowGreen: #00FF00;
 $rainbowBlue: #0000FF;
 $rainbowViolet: #4B0082;
 
-@import url('http://fonts.cdnfonts.com/css/monaco');
-
-@import './../../node_modules/bulma/sass/utilities/initial-variables.sass';
+@import './../../node_modules/bulma/sass/utilities/initial-variables.scss';
