--- a/src/components/statement/statement.scss
+++ b/src/components/statement/statement.scss
@@ -1,4 +1,9 @@
-#statement.hero {
+.slide-body.matrix {
   background-image: url('/images/matrix.jpg');
+  background-size: cover;
+}
+
+.slide-body.thegoodthebadtheugly {
+  background-image: url('/images/standoff.jpg');
   background-size: cover;
 }
