--- a/src/components/statement/carousel.scss
+++ b/src/components/statement/carousel.scss
@@ -28,10 +28,11 @@
   .slide-button {
     position: absolute;
     top: 45%;
-    color: white;
+    color: rgb(208, 205, 205);
     font-size: 4rem;
     font-family: "Silkscreen";
     text-shadow: 0px 0px 5px black;
+    transition: all .5s ease;
 
     &.next {
       right: 1rem;
@@ -39,6 +40,16 @@
 
     &.previous {
       left: 1rem;
+    }
+
+    &:not(.disabled):focus, &:not(.disabled):hover {
+      color: white;
+      text-shadow: 0px 0px 10px white;
+    }
+
+    &.disabled {
+      color: rgb(140, 140, 140);
+      cursor: inherit;
     }
   }
 
