feat: updated time machine

--- a/src/components/statement/statement.scss
+++ b/src/components/statement/statement.scss
@@ -7,3 +7,8 @@
   background-image: url('/images/standoff.jpg');
   background-size: cover;
 }
+
+.slide-body.paint {
+  background-image: url('/images/background.jpeg');
+  background-size: cover;
+}
