feat: rick terminal

--- a/src/components/statement/statement.scss
+++ b/src/components/statement/statement.scss
@@ -1,5 +1,7 @@
 .slide-body.matrix {
   background-image: url('/images/matrix.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
   background-size: cover;
 }
 
